@@ -11,7 +11,6 @@ import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.function.Function;
 
 import static org.junit.jupiter.api.Assertions.fail;
@@ -28,7 +27,7 @@ public class JsonFileReader {
   public static JsonArray readJsonArray(final String filePath) {
     try {
       final URI u = JsonFileReader.class.getResource(filePath).toURI();
-      final Path path = Paths.get(u);
+      final Path path = Path.of(u);
       final String jsonOutput = new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
       return new Gson().fromJson(jsonOutput, JsonArray.class);
     } catch (final JsonSyntaxException | IOException | URISyntaxException ex) {
@@ -41,7 +40,7 @@ public class JsonFileReader {
       final String filePath, final Function<String, String> fixupAllWireMockUrls) {
     try {
       final URI filePathUri = JsonFileReader.class.getResource(filePath).toURI();
-      final String jsonText = fixupAllWireMockUrls.apply(Files.readString(Paths.get(filePathUri)));
+      final String jsonText = fixupAllWireMockUrls.apply(Files.readString(Path.of(filePathUri)));
       return new Gson().fromJson(jsonText, JsonObject.class);
     } catch (final JsonSyntaxException | IOException | URISyntaxException ex) {
       fail("Exception reading jsonFile " + filePath + ": " + ex.getMessage());
